# dlopen_on_fork

./: .gitignore  README.md
poc/: Makefile  README.md  forkhook.c
test/: Makefile  frida-gadget.config  main.c
v1/: .gitignore  Cargo.toml  build.rs
v1/.cargo/: config.toml
v1/src/: .gitignore  lib.rs
